fixed index html + fixed gulp tasks

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="content/css/site.min.css">
 </head>
 <body>
     
     <div class="cashbox">
-        123123
+        <div>
+            <a href="" class="cashbox__logo">
+                <svg width='40' height='30' viewBox='0 0 41 33' xmlns='http://www.w3.org/2000/svg'>
+                    <g fill='none' fill-rule='nonzero'>
+                        <path fill='#fff' d='M0 0v33h32l9-17-9-16' />
+                        <path d='M11.78 23.507c-1.14 0-2.06.92-2.06 2.06 0 1.14.92 2.06 2.06 2.06 1.14 0 2.06-.92 2.06-2.06 0-1.14-.92-2.06-2.06-2.06zm11.717 0c-1.14 0-2.06.92-2.06 2.06 0 1.14.92 2.06 2.06 2.06 1.14 0 2.06-.92 2.06-2.06 0-1.14-.92-2.06-2.06-2.06z'
+                            fill='#222' />
+                        <path fill='#4b71b8' d='M29 9H12l-1-4H5v3h3l6 14 13-4c.314.31 2-.053 2-2V9z' />
+                    </g>
+                </svg>
+            </a>
+            <p class="cashbox__title">
+                На этой странице самая низкая цена на аренду
+                <b>Фотоаппарата Canon Mark III</b>
+            </p>
+        </div>
+        <button class="cashbox__btn btn btn--white">В корзине 2 товара</button>
     </div>
 
 </body>
