--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
             </p>
         </div>
         <button class="cashbox__btn btn btn--white">В корзине 2 товара</button>
+
+
+        <div class="cashbox-cart">
+            <a href="" class="cashbox-cart__close">X</a>
+            <div class="cashbox-cart__item">
+                <img src="https://avatars.mds.yandex.net/get-mpic/96484/img_id3959559130671271181/4hq" alt="Фотоаппарата Canon Mark III" class="cashbox-cart__img">
+                <div>
+                    <p class="cashbox-cart__title">Elari Часы Elari Fixitime 2</p>
+                    <p class="cashbox-cart__subtitle">150 б.р. <span class="cashbox-cart__desc">(за сутки - будние)</span></p>
+                </div>
+                <a class="cashbox-cart__remove" href="">убрать</a>
+            </div>
+
+            <div class="cashbox-cart__total">
+                <p class="cashbox-cart__total-text">
+                    Всего: 4 товара на 180 руб.
+                </p>
+                <button class="cashbox-cart__total-btn">Оплатить</button>
+            </div>
+        </div>
     </div>
 
 </body>
